more data, lots of writing

--- a/references.bib
+++ b/references.bib
@@ -45,6 +45,17 @@
   doi={10.1002/jrsm.1065}
 }
 
+@article{jackson2013meta,
+  title={Meta-analysis inside and outside particle physics: convergence using the path of least resistance?},
+  author={Jackson, Dan and Baker, Rose},
+  journal={Research Synthesis Methods},
+  volume={4},
+  number={2},
+  pages={125--126},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
 @article{hedges1987hard,
   title={How hard is hard science, how soft is soft science? The empirical cumulativeness of research.},
   author={Hedges, Larry V},
@@ -76,7 +87,8 @@
   number={3},
   pages={279},
   year={2002},
-  publisher={IOP Publishing}
+  publisher={IOP Publishing},
+  doi={10.1088/0026-1394/39/3/5}
 }
 
 @article{hisakado2006correlated,
@@ -112,6 +124,87 @@
   year={2015},
   publisher={Elsevier},
   doi={10.1016/j.cct.2015.09.002}
+}
+
+@article{mandel1970interlaboratory,
+  title={Interlaboratory evaluation of a material with unequal numbers of replicates},
+  author={Mandel, John and Paule, Robert C},
+  journal={Analytical chemistry},
+  volume={42},
+  number={11},
+  pages={1194--1197},
+  year={1970},
+  publisher={ACS Publications}
+}
+
+@article{inthout2015small,
+  title={Small studies are more heterogeneous than large ones: a meta-meta-analysis},
+  author={IntHout, Joanna and Ioannidis, John PA and Borm, George F and Goeman, Jelle J},
+  journal={Journal of clinical epidemiology},
+  volume={68},
+  number={8},
+  pages={860--869},
+  year={2015},
+  publisher={Elsevier},
+  doi={10.1016/j.jclinepi.2015.03.017}
+}
+
+@article{paule1982consensus,
+  title={Consensus values and weighting factors},
+  author={Paule, Robert C and Mandel, John},
+  journal={Journal of research of the National Bureau of Standards},
+  volume={87},
+  number={5},
+  pages={377},
+  year={1982},
+  doi={10.6028/jres.087.022},
+}
+
+@article{dersimonian2007random,
+  title={Random-effects model for meta-analysis of clinical trials: an update},
+  author={DerSimonian, Rebecca and Kacker, Raghu},
+  journal={Contemporary clinical trials},
+  volume={28},
+  number={2},
+  pages={105--114},
+  year={2007},
+  publisher={Elsevier},
+  doi={10.1016/j.cct.2006.04.004}
+}
+
+@article{rover2015hartung,
+  title={Hartung-Knapp-Sidik-Jonkman approach and its modification for random-effects meta-analysis with few studies},
+  author={R{\"o}ver, Christian and Knapp, Guido and Friede, Tim},
+  journal={BMC medical research methodology},
+  volume={15},
+  pages={1--7},
+  year={2015},
+  publisher={Springer},
+  doi={10.1186/s12874-015-0091-1}
+}
+
+@article{knapp2003improved,
+  title={Improved tests for a random effects meta-regression with a single covariate},
+  author={Knapp, Guido and Hartung, Joachim},
+  journal={Statistics in medicine},
+  volume={22},
+  number={17},
+  pages={2693--2710},
+  year={2003},
+  publisher={Wiley Online Library},
+  doi={10.1002/sim.1482}
+}
+
+@article{jackson2017hartung,
+  title={The Hartung-Knapp modification for random-effects meta-analysis: A useful refinement but are there any residual concerns?},
+  author={Jackson, Dan and Law, Martin and R{\"u}cker, Gerta and Schwarzer, Guido},
+  journal={Statistics in medicine},
+  volume={36},
+  number={25},
+  pages={3923--3934},
+  year={2017},
+  publisher={Wiley Online Library},
+  doi={10.1002/sim.7411}
 }
 
 @article{cochran1954combination,
@@ -225,7 +318,7 @@ url={https://pdg.lbl.gov/2011/listings/rpp2011-list-t-quark.pdf}
 }
 
 @article{tiesinga2021codata,
-  title={CODATA recommended values of the fundamental physical constants: 2018},
+  title={{CODATA} recommended values of the fundamental physical constants: 2018},
   author={Tiesinga, Eite and Mohr, Peter J and Newell, David B and Taylor, Barry N},
   journal={Journal of physical and chemical reference data},
   volume={50},
@@ -236,7 +329,7 @@ url={https://pdg.lbl.gov/2011/listings/rpp2011-list-t-quark.pdf}
 }
 
 @article{mohr2012codata,
-  title={CODATA recommended values of the fundamental physical constants: 2010},
+  title={{CODATA} recommended values of the fundamental physical constants: 2010},
   author={Mohr, Peter J and Taylor, Barry N and Newell, David B},
   journal={Journal of physical and chemical reference data},
   volume={41},
@@ -259,7 +352,7 @@ url={https://pdg.lbl.gov/2011/listings/rpp2011-list-t-quark.pdf}
 }
 
 @article{mohr2005codata,
-  title={CODATA recommended values of the fundamental physical constants: 2002},
+  title={{CODATA} recommended values of the fundamental physical constants: 2002},
   author={Mohr, Peter J and Taylor, Barry N},
   journal={Reviews of modern physics},
   volume={77},
@@ -435,6 +528,76 @@ url={https://pdg.lbl.gov/2011/listings/rpp2011-list-t-quark.pdf}
   doi={10.1214/06-BA117A},
   pages={515--534}
 }
+
+@article{caron2020baseline,
+  title={A baseline Antarctic GIA correction for space gravimetry},
+  author={Caron, Lambert and Ivins, Erik R},
+  journal={Earth and Planetary Science Letters},
+  volume={531},
+  pages={115957},
+  year={2020},
+  publisher={Elsevier},
+  doi={10.1016/j.epsl.2019.115957}
+}
+
+@article{bailey2017not,
+  title={Not Normal: the uncertainties of scientific measurements},
+  author={Bailey, David C},
+  journal={Royal Society open science},
+  volume={4},
+  number={1},
+  pages={160600},
+  year={2017},
+  publisher={The Royal Society Publishing},
+  doi={10.1098/rsos.160600}
+}
+
+@article{bailey2016data,
+  author = {Bailey, David C},
+  journal = {Dryad},
+  number = {},
+  title = {Data from: Not Normal: the uncertainties of scientific measurements [Dataset]},
+  volume = {},
+  year = {2016},
+  doi={10.5061/dryad.jb3mj}
+}
+
+@article{gott2001median,
+  title={Median Statistics, H0, and theAccelerating Universe},
+  author={Gott III, J Richard and Vogeley, Michael S and Podariu, Silviu and Ratra, Bharat},
+  journal={The Astrophysical Journal},
+  volume={549},
+  number={1},
+  pages={1},
+  year={2001},
+  publisher={IOP Publishing},
+  doi={10.1086/319055}
+}
+
+@article{stigler1977robust,
+  title={Do robust estimators work with real data?},
+  author={Stigler, Stephen M},
+  journal={The annals of statistics},
+  volume={5},
+  number={6},
+  pages={1055--1098},
+  year={1977},
+  publisher={Institute of Mathematical Statistics},
+  doi={10.1214/aos/1176343997}
+}
+
+@article{chen2003non,
+  title={Non-Gaussian Error Distribution of Hubble Constant Measurements},
+  author={Chen, Gang and Gott, J Richard and Ratra, Bharat},
+  journal={Publications of the Astronomical Society of the Pacific},
+  volume={115},
+  number={813},
+  pages={1269},
+  year={2003},
+  publisher={IOP Publishing},
+  doi={10.1086/379219}
+}
+
 
 
 ###########################
